--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3888,8 +3888,83 @@ input, select, textarea {
 	.certificates-container::-webkit-scrollbar-track {
 		background: #f9f9f9;
 	}
+	.certificate:hover {
+		transform: scale(1.1);
+	}
 	
+	.modal {
+		display: none;
+		position: fixed;
+		z-index: 1000;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.8);
+		justify-content: center;
+		align-items: center;
+	}
 	
+	/* Enlarged Certificate */
+	.modal-content {
+		max-width: 80%;
+		max-height: 80%;
+		border-radius: 10px;
+	}
+	
+	/* Close Button */
+	.close {
+		position: absolute;
+		top: 15px;
+		right: 25px;
+		color: white;
+		font-size: 35px;
+		cursor: pointer;
+	}
+
+
+	/* Typing text */
+
+	#typing-text {
+		font-weight:lighter; /* Makes text bold */
+		font-size: 1em; /* Adjust size if needed */
+	}
+
+	.arrow-button {
+		position: fixed;
+		top: 20px;
+		left: 20px;
+		font-size: 24px;
+		text-decoration: none;
+		background: #474848;
+		color: rgb(0, 0, 0);
+		padding: 10px 15px;
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 50px;
+		height: 50px;
+		box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+	}
+	
+	.arrow-button:hover {
+		background: #474848;
+	}
+	
+	#particles-js {
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		background: #0d0d0d; /* Dark background */
+	}
+	
+	@keyframes blink {
+		50% { opacity: 0; }
+	}
 	
 	
 	
